# web3-job-monitor

./: .gitignore  README.md  docker-compose.yml  preview-dashboard.html
.github/workflows/: crawl.yml
backend/: .env.example  Dockerfile  pyproject.toml  run_crawler.py
backend/app/: main.py
backend/app/api/: __init__.py  auth.py  crawl.py  deps.py  health.py  jobs.py  runs.py  settings.py  sources.py
backend/app/core/: config.py
backend/app/crawlers/: base.py  http_helpers.py  registry.py
backend/app/crawlers/adapters/: abetterweb3.py  aijobsnet.py  common.py  cryptocurrencyjobs.py  cryptojobslist.py  dejob.py  linkedin.py  remote3.py  web3career.py  web3jobsai.py  wellfound.py  workatstartup_ai.py
backend/app/db/: database.py  init_db.py
backend/app/models/: __init__.py  crawl_run.py  job.py  job_score.py  notification.py  setting.py  source.py
backend/app/schemas/: __init__.py  auth.py  job.py  run.py  score.py  setting.py  source.py
backend/app/services/: crawl_service.py  notifier.py  scoring.py  seed.py  settings_service.py
backend/app/utils/: auth.py  hash.py
backend/tests/: test_adapters_parsing.py  test_crawl_integration.py  test_hash_dedupe.py  test_new_sources.py  test_notifier_payload.py  test_scoring.py
frontend/: next.config.mjs  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx
frontend/app/jobs/: page.tsx
frontend/app/login/: page.tsx
frontend/app/runs/: page.tsx
frontend/app/settings/: page.tsx
frontend/app/sources/: page.tsx
frontend/components/: AuthGuard.tsx  Nav.tsx  api.ts
